trunk/Archive2/55/282636e770d54b/output
main.cpp:2:5: error: array initializer must be an initializer list
int c[] = new int[2]();
    ^
1 error generated.
