trunk/Archive2/55/282636e770d54b/main.cpp
int *b = new int[2](); //OK
int c[] = new int[2]();

int main(){ }